<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MRZ" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Iq0-q1-hXj">
                                <rect key="frame" x="20" y="148" width="374" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="barCodeField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2sd-2h-xeO">
                                <rect key="frame" x="188" y="199.5" width="39" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="parseButton"/>
                                <state key="normal" title="Parse"/>
                                <connections>
                                    <action selector="searhByMRZ:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wh1-tZ-xNp"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text=" " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vl5-46-CzU">
                                <rect key="frame" x="24" y="227" width="370" height="39"/>
                                <accessibility key="accessibilityConfiguration" identifier="id_label"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="370" id="wKu-I1-GCn"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Fvc-1l-rnT">
                                <rect key="frame" x="0.0" y="312" width="414" height="584"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="profile_cell" textLabel="qq5-3G-P2G" detailTextLabel="icC-rO-Vf7" style="IBUITableViewCellStyleSubtitle" id="33y-A6-fIZ">
                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="33y-A6-fIZ" id="pPy-M6-bvj">
                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qq5-3G-P2G">
                                                    <rect key="frame" x="20" y="5" width="33.5" height="20.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="cell_title"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="icC-rO-Vf7">
                                                    <rect key="frame" x="20" y="25.5" width="44" height="14.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="cell_subtitle"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                        </tableViewCellContentView>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="gz0-tx-oHV"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="krp-dI-tVv"/>
                                </connections>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="2sd-2h-xeO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="188" id="CyK-9k-a4o"/>
                            <constraint firstItem="2sd-2h-xeO" firstAttribute="top" secondItem="Iq0-q1-hXj" secondAttribute="bottom" constant="21.5" id="KYr-Zo-2MO"/>
                            <constraint firstItem="Fvc-1l-rnT" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="P9g-Yb-eHQ"/>
                            <constraint firstItem="vl5-46-CzU" firstAttribute="top" secondItem="2sd-2h-xeO" secondAttribute="bottom" constant="16" id="WWh-cv-shw"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vl5-46-CzU" secondAttribute="trailing" constant="20" id="Zhv-jG-Mmy"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Iq0-q1-hXj" secondAttribute="trailing" constant="20" id="aHU-v4-3eq"/>
                            <constraint firstItem="vl5-46-CzU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="bKg-Bz-Taa"/>
                            <constraint firstItem="Fvc-1l-rnT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="e2B-7I-X6T"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="vl5-46-CzU" secondAttribute="bottom" constant="596" id="jW2-u8-clW"/>
                            <constraint firstItem="Fvc-1l-rnT" firstAttribute="top" secondItem="vl5-46-CzU" secondAttribute="bottom" constant="46" id="oUI-p4-UZa"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2sd-2h-xeO" secondAttribute="trailing" constant="187" id="sPf-bx-EOE"/>
                            <constraint firstItem="Iq0-q1-hXj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="sRp-w9-7ai"/>
                            <constraint firstAttribute="bottom" secondItem="Fvc-1l-rnT" secondAttribute="bottom" id="y9W-LJ-NwQ"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="firstLastNameLabel" destination="vl5-46-CzU" id="T0B-fQ-phG"/>
                        <outlet property="mrzInputField" destination="Iq0-q1-hXj" id="9hO-hf-psR"/>
                        <outlet property="searchButton" destination="2sd-2h-xeO" id="0OG-9f-Y5u"/>
                        <outlet property="tableView" destination="Fvc-1l-rnT" id="BCk-HX-RV5"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
        </scene>
    </scenes>
</document>
