...
  
  fileprivate init(title: String?, message: String?, preferredStyle: UIAlertController.Style) {
    self.alert = UIAlertController(title: title,
                                   message: message,
                                   preferredStyle: preferredStyle)
    
    let action = UIAlertAction(title: "OK", style: .destructive) { action in
      self.alert = nil
    }
    
    self.alert?.addAction(action)
  }
  
...
