...
    
    if isContryCodeIncluded(passportCode) && isPassportFormat(passportCode) {
      DispatchQueue.main.async {
        self.firstLastNameLabel.text = self.parseID(passportCode) ?? "Incorrect barcode"
      }
    } else {
      AlertView.create(.alert, title: "Error", message: "Barcode invalid. Please try again.").show()
      return
    }
  }
  
  func setupTableView() {
    tableView.dataSource = self
...
